# ida-cmake

./: .gitignore  CLAUDE.md  LICENSE  README.md  addons.cmake  bootstrap.cmake  common.cmake  idasdk.cmake  idasdkConfig.cmake  idasdkConfigVersion.cmake  plugins.cmake
.claude/: CLAUDE.md
.claude/agents/: ida-cmake.md
.github/workflows/: build.yml
cmake/: QtSupport.cmake  agent.cmake  ci.cmake  compiler.cmake  platform.cmake  targets.cmake  utilities.cmake
idalib/: CMakeLists.txt  main.cpp
loaders/simpleloader/: CMakeLists.txt  loader_template.cpp
module/i51/: CMakeLists.txt
plugins/: CMakeLists.txt  README.md
plugins/decompiler/vds3/: CMakeLists.txt
plugins/goomba/: BUILDING.md
plugins/pdb/: CMakeLists.txt
plugins/sample/: CMakeLists.txt  mysample.cpp  prep-cmake.bat
plugins/sample_anysdk/: CMakeLists.txt
plugins/twoplugins/: CMakeLists.txt  mysample1.cpp  mysample2.cpp
samples/: wizmo32.exe.i64
templates/: CLAUDE.md
templates/idalib/: CMakeLists.txt  main.cpp
templates/idalib-vanilla/: CMakeLists.txt  README.md
templates/loader/: CMakeLists.txt  loader.cpp
templates/plugin/: CMakeLists.txt  ida-plugin.json  main.cpp
templates/plugin-no-bootstrap/: CMakeLists.txt  README.md
templates/plugin-pch/: CMakeLists.txt  main.cpp  pch.h  plugin.h
templates/plugin-vanilla/: CMakeLists.txt  README.md
templates/procmod/: CMakeLists.txt  ana.cpp  emu.cpp  i51.hpp  ins.hpp  merge.cpp  out.cpp  reg.cpp
